# notebook-lm

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md
.github/workflows/: release.yml
.gstack/qa-reports/: PLAN.md  tech-audit.md  ux-audit.md
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/electron/: main.cjs  menu.cjs  preload.cjs  updater.cjs
apps/desktop/src/: App.tsx  DocumentPreview.css  DocumentPreview.tsx  api.ts  index.css  main.tsx  types.ts
apps/desktop/src/components/chat/: ChatView.tsx  MessageBubble.tsx  QuickChips.tsx  chat.css
apps/desktop/src/components/documents/: DocumentCard.tsx  DropZone.tsx  documents.css
apps/desktop/src/components/layout/: AppShell.tsx  Sidebar.tsx  (+2 more)
apps/desktop/src/design-system/: tokens.css
apps/desktop/src/hooks/: useChat.ts  useConversations.ts  useDocuments.ts  useNotebooks.ts  usePaneResize.ts
apps/desktop/src/store/: app-store.ts
apps/desktop/src/utils/: bibtex.ts  errorMessages.ts  timeAgo.ts
backend/: launcher.py  notebooklm.spec  pyproject.toml
backend/notebooklm_backend/: app.py  config.py
backend/notebooklm_backend/models/: chat.py  notebook.py
backend/notebooklm_backend/routes/: chat.py  conversations.py  documents.py  notebooks.py  zotero.py
backend/notebooklm_backend/services/: chat.py  conversation_store.py  document_loader.py  embeddings.py  llm.py  metrics_store.py  notebook_store.py  rag.py  rag_llamaindex.py  vector_store.py  zotero_import.py
backend/tests/: test_conversation_store.py  test_cross_notebook.py  test_notebook_store.py
docs/superpowers/plans/: 2026-04-11-mac-app-distribution.md  2026-04-15-frontend-revamp.md
docs/superpowers/specs/: 2026-04-08-notebook-lm-revamp-design.md  2026-04-11-mac-app-distribution-design.md  2026-04-15-design-system-lazy-scholar-design.md
scripts/: build_backend.sh
(+22 files in other folders)
